田间大厅功能

--- a/templates/gobang.html
+++ b/templates/gobang.html
@@ -39,6 +39,7 @@
 <!-- Body -->
 
 <body>
+    <p id="RoomKey" hidden>{{ key }}</p>
     <!-- Container -->
     <div id="container">
         <table class="tab" id="chess_table">
