--- a/templates/gobangAI.html
+++ b/templates/gobangAI.html
@@ -39,6 +39,7 @@
 <!-- Body -->
 
 <body>
+    <p id="RoomKey" hidden>{{ key }}</p>
     <!-- Container -->
     <div id="container">
         <table class="tab" id="chess_table">
