--- a/templates/gobang.html
+++ b/templates/gobang.html
@@ -4,8 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>五子棋</title>
+    <title>大翔五子棋</title>
     <!-- css -->
+    <link rel="shortcut icon" href="/static/images/favicon.ico" >
     <style type="text/css">
         #container {
             width: 531px;
